Mark embedded languages in code block

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "path": "./syntaxes/codeblock.json",
         "injectTo": [
           "text.html.markdown"
-        ]
+        ],
+        "embeddedLanguages": {
+          "meta.embedded.block.superjs": "javascript"
+        }
       }
     ]
   },
